// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-action-chip Renders \`c-alarm-tag-chip\` with custom props and slot 1`] = `
<span
  class="v-chip c-alarm-action-chip v-chip--small theme--light"
  close="true"
  style="background-color: rgb(0, 0, 0); border-color: #000;"
  tabindex="0"
>
  <span
    class="v-chip__content"
  >
    <div
      class="layout c-alarm-action-chip__text white--text row align-center"
    >
      <div
        class="default-slot"
      />
    </div>
    <!---->
  </span>
</span>
`;

exports[`c-alarm-action-chip Renders \`c-alarm-tag-chip\` with default props 1`] = `
<span
  class="v-chip c-alarm-action-chip v-chip--small theme--light"
  tabindex="0"
>
  <span
    class="v-chip__content"
  >
    <div
      class="layout c-alarm-action-chip__text white--text row align-center"
    />
    <!---->
  </span>
</span>
`;
